--- a/src/index.html
+++ b/src/index.html
@@ -11,17 +11,99 @@
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700;800&display=swap"
       rel="stylesheet"
     />
+
     <link rel="stylesheet" href="styles/main.scss" />
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
   </head>
   <body>
     <header class="hero">
       <div class="container">
         <img class="hero__logo" src="./images/ebac_logo.svg" alt="EBAC" />
         <p class="hero__text">
-          O maior evento de tecnologia do Brasil começa em 10d 12h 20m 15s
+          O maior evento de tecnologia do Brasil começa em
+          <span id="counter"></span>
         </p>
+        <div class="infos-bar">
+          <ul class="infos-bar__infos">
+            <li class="infos-bar__infos__item">
+              <strong>Localização</strong>
+              Allianz Parque - Barra Funda - São Paulo
+            </li>
+            <li class="infos-bar__infos__item">
+              <strong> Preço </strong>
+              A partir de R$ 120,00
+            </li>
+            <li class="infos-bar__infos__item">
+              <strong>Quando</strong>
+              12/12/2023 às 19hrs
+            </li>
+          </ul>
+          <a href="#" class="button button--primary">Garanta sua vaga</a>
+        </div>
       </div>
     </header>
+
+    <section class="event event--frontend">
+      <div class="container" data-aos="fade-right">
+        <div class="event__details">
+          <h2 class="event__details__title">Front-end</h2>
+          <p class="event__details__description">
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+            Repudiandae molestiae eaque id, maiores aspernatur quis quo delectus
+            porro inventore excepturi molestias quos itaque expedita sed
+            corporis recusandae eos consectetur ab.
+          </p>
+        </div>
+        <img src="./images/frontend.png" alt="Front-end" class="event__image" />
+      </div>
+    </section>
+
+    <section class="event event--ux-ui event--image-left">
+      <div class="container" data-aos="fade-left">
+        <div class="event__details">
+          <h2 class="event__details__title">UI/UX</h2>
+          <p class="event__details__description">
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+            Repudiandae molestiae eaque id, maiores aspernatur quis quo delectus
+            porro inventore excepturi molestias quos itaque expedita sed
+            corporis recusandae eos consectetur ab.
+          </p>
+        </div>
+        <img src="./images/ui-ux.png" alt="UI/UX" class="event__image" />
+      </div>
+    </section>
+
+    <section class="event event--data-science">
+      <div class="container" data-aos="fade-right">
+        <div class="event__details">
+          <h2 class="event__details__title">Data Science</h2>
+          <p class="event__details__description">
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+            Repudiandae molestiae eaque id, maiores aspernatur quis quo delectus
+            porro inventore excepturi molestias quos itaque expedita sed
+            corporis recusandae eos consectetur ab.
+          </p>
+        </div>
+        <img src="./images/data.png" alt="Data Science" class="event__image" />
+      </div>
+    </section>
+
+    <section class="event event--backend event--image-left">
+      <div class="container" data-aos="fade-left">
+        <div class="event__details">
+          <h2 class="event__details__title">Back-end</h2>
+          <p class="event__details__description">
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+            Repudiandae molestiae eaque id, maiores aspernatur quis quo delectus
+            porro inventore excepturi molestias quos itaque expedita sed
+            corporis recusandae eos consectetur ab.
+          </p>
+        </div>
+        <img src="./images/backend.png" alt="Back-end" class="event__image" />
+      </div>
+    </section>
+
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
 
     <script src="scripts/main.js"></script>
   </body>
